--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
+    "@tailwindcss/vite": "^4.0.12",
+    "tailwindcss": "^4.0.12",
     "vue": "^3.5.13"
   },
   "devDependencies": {
