--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.0.12",
+    "axios": "^1.8.2",
     "tailwindcss": "^4.0.12",
     "vue": "^3.5.13"
   },
